<resources>
    <string name="app_name">Fait moi un dessin</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Pseudonyme</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connection</string>
    <string name="welcome">"Bienvenue!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Le nom d'utilisateur ou le mot de passe est eronné"</string>
    <string name="inscription">Inscription</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="envoyer">Envoyer</string>
    <string name="pr_nom">Prénom</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="nom">Nom</string>
</resources>